<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/last_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAlignment="textStart"
            android:text="@string/last_update"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/textlines"
                    android:text="@string/state"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:paddingBottom="5dp"
                    android:textSize="15sp"
                    android:id="@+id/tv_positive_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/positive"/>

                <TextView
                    android:paddingBottom="5dp"
                    android:textSize="15sp"
                    android:id="@+id/tv_negative_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/negative"/>

                <TextView
                    android:paddingBottom="5dp"
                    android:textSize="15sp"
                    android:id="@+id/tv_deaths_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deaths"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:background="@drawable/textlines"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/essex"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:paddingBottom="5dp"
                    android:id="@+id/tv_positive_essex"
                    android:layout_width="match_parent"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"
                    android:text="@string/positive"/>

                <TextView
                    android:paddingBottom="5dp"
                    android:textSize="15sp"
                    android:id="@+id/tv_negative_essex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/negative"/>

                <TextView
                    android:paddingBottom="5dp"
                    android:textSize="15sp"
                    android:id="@+id/tv_deaths_essex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deaths"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/History"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/btn_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state"/>

        <Button
            android:id="@+id/btn_essex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/essex"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/accumulative_comparison"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart_all"
                android:layout_width="match_parent"
                android:layout_height="339dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>